smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enum-values/enum-with-newline-before-value.smithy
// Parse error at line 6, column 10 near `\n `: Expected a valid identifier character, but found '\n' | Model
$version: "2.0"
namespace smithy.example

enum Foo {
    BAR =
    "hi"
}
